add: nav prev & nav

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
       <li><img src="./img/foto6.jpg" alt=""></li>
     </ul>
   </main>
+  <div class="arrow-nav">
+    <button class="prev">Prev</button>
+    <button class="next">Next</button>
+  </div>
 </body>
 
 </html>
